--- a/IA/Keras/CNN/readme
+++ b/IA/Keras/CNN/readme
@@ -1,2 +1,1 @@
-La idea aca es jugar con redes neuronales de diversos tipos para aprender el funcionamiento de las mismas y estar mas canchero para
-cuando haya que ponerse con el modelo principal.
+Esta red neuronal clasifica imagenes en dos clases (bananas y lechugas). Da una salida entre 0 a 1 donde 1 es lechuga y 0 es banana.
