--- a/IA/Tensor Flow/README
+++ b/IA/Tensor Flow/README
@@ -9,4 +9,6 @@ El IA Notebook 4 está hecho 3 veces. Una sin librerias, otra con TensorFlow y o
 a mayor nivel. Esta bueno para ver que hacen las librerías internamente y ver realmente como funciona el back propagation. Es un ejercicio
 de clasificación, super simple.
 
+Los "IA NOTEBOOKs" estan basados en tutoriales disponibles en este canal de youtube: https://www.youtube.com/channel/UCy5znSnfMsDwaLlROnZ7Qbg
+
 Hay una carpeta que es un curso pochoclero que saque del mit
