--- a/IA/Redes para Practicar/README
+++ b/IA/Redes para Practicar/README
@@ -11,4 +11,6 @@ de clasificación, super simple.
 
 Los "IA NOTEBOOKs" estan basados en tutoriales disponibles en este canal de youtube: https://www.youtube.com/channel/UCy5znSnfMsDwaLlROnZ7Qbg
 
+La carpeta LSTM tiene arquitecturas de red para prediccion de datos. Tiene 3 subcarpetas de codigos que NO están finalizados
+
 Hay una carpeta que es un curso pochoclero que saque del mit
