Desarrollo del primer objetivo (tierre errores aun)

--- a/Crop Yield Prediction/Crop Type Classification model - CNN/Example Using GDAL/Example1 (1).ipynb
+++ b/Crop Yield Prediction/Crop Type Classification model - CNN/Example Using GDAL/Example1 (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +98,49 @@
     "ndvi_image=NDVI(nir_array,red_array)\n",
     "mostrar(ndvi_image)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "masked_array(\n",
+       "  data=[[-0.0, -0.0, -0.0, ..., -0.0, -0.0, -0.0],\n",
+       "        [-0.0, -0.0, -0.0, ..., -0.0, -0.0, -0.0],\n",
+       "        [-0.0, -0.0, -0.0, ..., -0.0, -0.0, -0.0],\n",
+       "        ...,\n",
+       "        [-0.0, -0.0, -0.0, ..., -0.0, -0.0, -0.0],\n",
+       "        [-0.0, -0.0, -0.0, ..., -0.0, -0.0, -0.0],\n",
+       "        [-0.0, -0.0, -0.0, ..., -0.0, -0.0, -0.0]],\n",
+       "  mask=[[False, False, False, ..., False, False, False],\n",
+       "        [False, False, False, ..., False, False, False],\n",
+       "        [False, False, False, ..., False, False, False],\n",
+       "        ...,\n",
+       "        [False, False, False, ..., False, False, False],\n",
+       "        [False, False, False, ..., False, False, False],\n",
+       "        [False, False, False, ..., False, False, False]],\n",
+       "  fill_value=1e+20,\n",
+       "  dtype=float32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndvi_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
