--- a/Crop Yield Prediction/Crop Type Classification model - CNN/First/Untitled.ipynb
+++ b/Crop Yield Prediction/Crop Type Classification model - CNN/First/Untitled.ipynb
@@ -6,13 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from osgeo import gdal, gdalnumeric, ogr, osr\n",
     "from PIL import Image, ImageDraw\n",
     "import sys, os\n",
     "from osgeo import gdal_array\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import geoio"
+    "import geoio\n",
+    "\n",
+    "if 'GDAL_DATA' not in os.environ:\n",
+    "    os.environ['GDAL_DATA'] = r'C:\\GDAL\\data'\n",
+    "\n",
+    "from osgeo import gdal, gdalnumeric, ogr, osr"
    ]
   },
   {
@@ -112,7 +116,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1 = osr.SpatialReference() #define test1\n",
+    "test1.ImportFromEPSG(4326)\n",
+    "print(test1.ExportToPrettyWkt())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "6: could not import from EPSG",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-62907b35e23c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtestSR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mImportFromEPSG\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4326\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m': could not import from EPSG'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtestSR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mExportToPrettyWkt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: 6: could not import from EPSG"
+     ]
+    }
+   ],
+   "source": [
+    "#Esto es para verificar que GDAL tenga todas las dependencias bien instaladas\n",
+    "#Esto la primera vez que lo corrí tiró un RunTime error\n",
+    "#Con esto verifique que la funcion ImportFromEPSG no funcionaba correctamente\n",
+    "#Segun investigue se debe a que la variable de entorno de GDAL no esta bien seteada\n",
+    "#Esta variable debe tener un valor que apunte a una carpeta \n",
+    "#O sea esto: os.environ['GDAL_DATA'] = r'/path/to/gdal_data'\n",
+    "#dentro de esa carpeta deben estar creo que TODOS estos archivos: http://trac.osgeo.org/gdal/browser/trunk/gdal/data\n",
+    "#Para no hacerlo a mano, se puede instalar esto: http://trac.osgeo.org/osgeo4w/ que en teoria ya lo hace todo de una.\n",
+    "\n",
+    "#testSR = osr.SpatialReference()\n",
+    "#res = testSR.ImportFromEPSG(4326)\n",
+    "#if res != 0:\n",
+    "#    raise RuntimeError(repr(res) + ': could not import from EPSG')\n",
+    "#print(testSR.ExportToPrettyWkt())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "7: could not import from EPSG",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-62907b35e23c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtestSR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mImportFromEPSG\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4326\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m': could not import from EPSG'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtestSR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mExportToPrettyWkt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: 7: could not import from EPSG"
+     ]
+    }
+   ],
+   "source": [
+    "testSR = osr.SpatialReference()\n",
+    "res = testSR.ImportFromEPSG(4326)\n",
+    "if res != 0:\n",
+    "    raise RuntimeError(repr(res) + ': could not import from EPSG')\n",
+    "print(testSR.ExportToPrettyWkt())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +204,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-3aee1184b7a0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAddPoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlon\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#Se transforma ese punto (lon,lat) en un pixel que puede ser pintado sobre la imagen satelital\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mExportToWkt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#Se exporta el punto en formato wkt (writable k.. text)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-11-9fb53b39fc3d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAddPoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlon\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#Se transforma ese punto (lon,lat) en un pixel que puede ser pintado sobre la imagen satelital\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mExportToWkt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#Se exporta el punto en formato wkt (writable k.. text)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mD:\\Programas\\AnacondaFinal\\lib\\site-packages\\osgeo\\ogr.py\u001b[0m in \u001b[0;36mTransform\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   7371\u001b[0m         \u001b[0mOGRERR_NONE\u001b[0m \u001b[0mon\u001b[0m \u001b[0msuccess\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0man\u001b[0m \u001b[0merror\u001b[0m \u001b[0mcode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   7372\u001b[0m         \"\"\"\n\u001b[1;32m-> 7373\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_ogr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGeometry_Transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   7374\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   7375\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: in method 'Geometry_Transform', argument 2 of type 'OSRCoordinateTransformationShadow *'"
      ]
@@ -132,9 +214,10 @@
     "#Aca la idea es agarrar una coordenada (lon,lat) y graficarla encima de la imagen rgb satelital\n",
     "\n",
     "source = osr.SpatialReference() #Se define la referencia espacial de la coordenada\n",
-    "source.ImportFromEPSG(2927)\n",
+    "source.ImportFromEPSG(4326)\n",
     "target = osr.SpatialReference() #Se define la referencia espacial de la imágen satelital\n",
-    "target.ImportFromEPSG(4326)\n",
+    "\n",
+    "target.ImportFromEPSG(4326) #Esto está mal, pero por ahora para ver si anda..\n",
     "\n",
     "transform = osr.CoordinateTransformation(source, target) #se genera una matriz de transformacion de un campo al otro\n",
     "\n",
@@ -146,6 +229,42 @@
     "point.Transform(transform) #Se transforma ese punto (lon,lat) en un pixel que puede ser pintado sobre la imagen satelital\n",
     "\n",
     "point.ExportToWkt() #Se exporta el punto en formato wkt (writable k.. text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is dir: False\n",
+      "is file: False\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] El sistema no puede encontrar la ruta especificada: '/path/to/gdal_data\\\\gcs.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-8189289af9f0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgcs_csv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgdal_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'gcs.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'is file: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgcs_csv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgcs_csv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'is readable: '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbool\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mst\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mst_mode\u001b[0m \u001b[1;33m&\u001b[0m \u001b[0mstat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mS_IRGRP\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] El sistema no puede encontrar la ruta especificada: '/path/to/gdal_data\\\\gcs.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import stat\n",
+    "gdal_data = os.environ['GDAL_DATA']\n",
+    "print('is dir: ' + str(os.path.isdir(gdal_data)))\n",
+    "gcs_csv = os.path.join(gdal_data, 'gcs.csv')\n",
+    "print('is file: ' + str(os.path.isfile(gcs_csv)))\n",
+    "st = os.stat(gcs_csv)\n",
+    "print('is readable: ' + str(bool(st.st_mode & stat.S_IRGRP)))"
    ]
   },
   {
